reduce the gap slightly, fix regarding the last commit

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ a {
     width: 4rem;
     background-color: #3882F6;
     color: #F9FAF8;
-    margin-top: 0.8rem;
+    margin-top: 0.7rem;
     padding: 8px 32px;
     text-align: center;
     border-radius: 8px;
